--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,3 +1,26 @@
 .wrapper{
-    border: 10px solid;
+    border: 1px solid;
+    float: left;
+    height: 700px;
+    width: 65%;
+    text-align: center;
+    padding-top: 80px;
+}
+
+.signUp{
+    border: 1px solid;
+   float: right;
+    height: 700px;
+    width: 35%;
+    text-align: center;
+    padding-top: 80px;
+}
+
+#fb-google{
+    border: 1px solid;
+    height: 500px;
+    width: 90%;
+}
+body{
+    background-color: #edf0f6;
 }
