--- a/client/src/components/profilePic/style.css
+++ b/client/src/components/profilePic/style.css
@@ -4,8 +4,14 @@
     width:100px;
     border-radius: 50%;
     margin: 0;
+    
 }
 
 .jumbotron{
-    
+  
+}
+
+#map{
+    height:700px;
+    text-align: center;
 }
