--- a/client/src/style.css
+++ b/client/src/style.css
@@ -24,4 +24,30 @@
 body{
     background-color: #edf0f6;
 }
+    .navbar-brand{
+        font-size: 25px;
+        font-weight: 100px;
+        color: whitesmoke;
+        text-shadow: 3px 2px slategray;
+    }
 
+
+button{
+    border-radius: 6px !important;
+    float: right;
+    margin: 3px 10px;
+}
+
+.navi{
+    height: 50px;
+    background-color: dodgerblue;
+}
+
+a{
+    color: whitesmoke;
+    text-shadow: 3px 2px slategray;
+    font-weight: 10px;
+    font-size: 23px;
+    padding: 4px;
+
+}
